--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(test main.cpp)
-target_link_libraries(test nestedcontainer_static)
+#target_link_libraries(test nestedcontainer_static)
 
