Unordered predefined versions.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(nested_container OBJECT nested_container.cpp)
-add_library(nested_container_ext OBJECT nested_container_ext.cpp)
+add_library(nested_container_ext OBJECT EXCLUDE_FROM_ALL nested_container_ext.cpp)
 
 add_executable(readme_demos readme_demos.cpp $<TARGET_OBJECTS:nested_container>)
 add_executable(tests unit_tests.cpp $<TARGET_OBJECTS:nested_container>)
