--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,8 @@ Find_Package(GTest)
 Find_Package(rapidjson)
 
 # Externalized container
-add_library(json_backbone OBJECT json_backbone.cc json_backbone_spirit.cc)
+add_library(json_backbone OBJECT json_backbone.cc)
+add_library(json_backbone_boost OBJECT json_backbone_spirit.cc)
 # This one is only used to test it compiles correctly
 add_library(json_backbone_ext OBJECT EXCLUDE_FROM_ALL json_backbone_ext.cc)
 # GTest runner
@@ -15,8 +16,8 @@ endif()
 include_directories(${GTEST_INCLUDE_DIRS})
 add_custom_target(build-test)
 function(add_nc_test name)
-  set(test_obj_libs $<TARGET_OBJECTS:json_backbone>)
   if("${ARGV1}" STREQUAL "GT")
+    set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV2})
     if (GTEST_FOUND)
       add_executable(${name} ${name}.cc $<TARGET_OBJECTS:test-main> ${test_obj_libs} ${HEADER_FILES})
       target_link_libraries(${name} ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
@@ -24,6 +25,7 @@ function(add_nc_test name)
       add_test(${name} ${name})  
     endif()
   else()
+    set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV1})
     add_executable(${name} ${name}.cc ${test_obj_libs} ${HEADER_FILES})
     target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
     add_dependencies(build-test ${name})
@@ -32,12 +34,13 @@ function(add_nc_test name)
 endfunction()
 
 # Test declarations
-add_nc_test(readme_demos)
+add_nc_test(readme_demos $<TARGET_OBJECTS:json_backbone_boost>)
 add_nc_test(unit_tests GT)
-add_nc_test(perf_json_serialize)
+add_nc_test(unit_tests_boost_spirit GT $<TARGET_OBJECTS:json_backbone_boost>)
+add_nc_test(perf_json_serialize $<TARGET_OBJECTS:json_backbone_boost>)
 add_nc_test(container_default GT)
 if (${RAPIDJSON_FOUND})
   include_directories(${RAPIDJSON_INCLUDE_DIRS})
   add_nc_test(container_rapidjson GT)
-  add_nc_test(perf_json_parse)
+  add_nc_test(perf_json_parse $<TARGET_OBJECTS:json_backbone_boost>)
 endif()
