--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,29 +1,25 @@
 Find_Package(Threads REQUIRED)
-Find_Package(GTest)
 Find_Package(rapidjson)
 
 # Externalized container
-add_library(json_backbone OBJECT json_backbone.cc)
+#add_library(json_backbone OBJECT json_backbone.cc)
 #add_library(json_backbone_boost OBJECT json_backbone_spirit.cc)
 # This one is only used to test it compiles correctly
-add_library(json_backbone_ext OBJECT EXCLUDE_FROM_ALL json_backbone_ext.cc)
+#add_library(json_backbone_ext OBJECT EXCLUDE_FROM_ALL json_backbone_ext.cc)
 # GTest runner
-if (${GTEST_FOUND})
-  add_library(test-main OBJECT test-main.cc)
-endif()
+add_library(catch_main OBJECT main.cc)
 
 # Macro to declare tests
-include_directories(${GTEST_INCLUDE_DIRS})
+include_directories(${PROJECT_SOURCE_DIR}/external/catch/single_include)
 add_custom_target(build-test)
 function(add_nc_test name)
-  if("${ARGV1}" STREQUAL "GT")
-    set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV2})
-    if (GTEST_FOUND)
-      add_executable(${name} ${name}.cc $<TARGET_OBJECTS:test-main> ${test_obj_libs} ${HEADER_FILES})
-      target_link_libraries(${name} ${GTEST_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-      add_dependencies(build-test ${name})
-      add_test(${name} ${name})  
-    endif()
+  if("${ARGV1}" STREQUAL "CATCH")
+    #set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV2})
+    set(test_obj_libs ${ARGV2})
+    add_executable(${name} ${name}.cc $<TARGET_OBJECTS:catch_main> ${test_obj_libs} ${HEADER_FILES})
+    target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
+    add_dependencies(build-test ${name})
+    add_test(${name} ${name})  
   else()
     set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV1})
     add_executable(${name} ${name}.cc ${test_obj_libs} ${HEADER_FILES})
@@ -35,12 +31,13 @@ endfunction()
 
 # Test declarations
 #add_nc_test(readme_demos $<TARGET_OBJECTS:json_backbone_boost>)
-add_nc_test(unit_tests GT)
+add_nc_test(unit_tests CATCH)
+
 #add_nc_test(unit_tests_boost_spirit GT $<TARGET_OBJECTS:json_backbone_boost>)
 #add_nc_test(perf_json_serialize $<TARGET_OBJECTS:json_backbone_boost>)
-add_nc_test(container_default GT)
+#add_nc_test(container_default GT)
 if (${RAPIDJSON_FOUND})
   include_directories(${RAPIDJSON_INCLUDE_DIRS})
-  add_nc_test(container_rapidjson GT)
+  #add_nc_test(container_rapidjson GT)
   #add_nc_test(perf_json_parse $<TARGET_OBJECTS:json_backbone_boost>)
 endif()
