--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
+include(CheckCXXCompilerFlag)
 
 project(CppNestedContainer)
 enable_testing()
@@ -15,14 +16,14 @@ include_directories(
 # Referencing local modules
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/test/cmake)
 
-# C++11
-include(CheckCXXCompilerFlag)
-check_cxx_compiler_flag(-std=c++11 HAVE_STD_CPP11_FLAG)
-if (HAVE_STD_CPP11_FLAG)
-  message("-- C++11 support found.")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-else()
-  message(FATAL_ERROR "Your compiler must support at least C++11 to compile ${PROJECT_NAME}.")
+# C++14 is a requirement here
+if (NOT MSVC)
+  check_cxx_compiler_flag(-std=c++1y HAVE_STD_CPP14_FLAG)
+  if (HAVE_STD_CPP14_FLAG)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+  else()
+    message(FATAL_ERROR "Your compiler must support at least C++14 to compile ${PROJECT_NAME}.")
+  endif()
 endif()
 
 ### Boost support ###
