Reorganize test files.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,20 +8,19 @@ Find_Package(rapidjson)
 #add_library(json_backbone_ext OBJECT EXCLUDE_FROM_ALL json_backbone_ext.cc)
 # GTest runner
 add_library(catch_main OBJECT main.cc)
+set(catch_exe_source_list)
 
 # Macro to declare tests
 include_directories(${PROJECT_SOURCE_DIR}/external/catch/single_include)
 add_custom_target(build-test)
-function(add_nc_test name)
+function(add_project_test name)
   if("${ARGV1}" STREQUAL "CATCH")
-    #set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV2})
-    set(test_obj_libs ${ARGV2})
     add_executable(${name} ${name}.cc $<TARGET_OBJECTS:catch_main> ${test_obj_libs} ${HEADER_FILES})
+    set(catch_exe_source_list ${name}.cc)
     target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
     add_dependencies(build-test ${name})
-    add_test(${name} ${name})  
   else()
-    set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV1})
+    #set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV1})
     add_executable(${name} ${name}.cc ${test_obj_libs} ${HEADER_FILES})
     target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
     add_dependencies(build-test ${name})
@@ -31,7 +30,7 @@ endfunction()
 
 # Test declarations
 #add_nc_test(readme_demos $<TARGET_OBJECTS:json_backbone_boost>)
-add_nc_test(unit_tests CATCH)
+add_project_test(variant CATCH)
 
 #add_nc_test(unit_tests_boost_spirit GT $<TARGET_OBJECTS:json_backbone_boost>)
 #add_nc_test(perf_json_serialize $<TARGET_OBJECTS:json_backbone_boost>)
@@ -41,3 +40,10 @@ if (${RAPIDJSON_FOUND})
   #add_nc_test(container_rapidjson GT)
   #add_nc_test(perf_json_parse $<TARGET_OBJECTS:json_backbone_boost>)
 endif()
+
+# Bundle all tests in one executable. No problem witch catch tags
+set(unit_tests_name "unit_tests")
+add_executable(${unit_tests_name} ${catch_exe_source_list} $<TARGET_OBJECTS:catch_main>)
+add_test(run_${unit_tests_name} ${unit_tests_name})
+target_link_libraries(${unit_tests_name} ${CMAKE_THREAD_LIBS_INIT})
+add_dependencies(build-test ${unit_tests_name})
