--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,12 +13,9 @@ set(catch_exe_source_list)
 # Macro to declare tests
 include_directories(${PROJECT_SOURCE_DIR}/external/catch/single_include)
 add_custom_target(build-test)
-function(add_project_test name)
+macro(add_project_test name)
   if("${ARGV1}" STREQUAL "CATCH")
-    add_executable(${name} ${name}.cc $<TARGET_OBJECTS:catch_main> ${test_obj_libs} ${HEADER_FILES})
-    set(catch_exe_source_list ${name}.cc)
-    target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
-    add_dependencies(build-test ${name})
+    list(APPEND catch_exe_source_list ${name}.cc)
   else()
     #set(test_obj_libs $<TARGET_OBJECTS:json_backbone> ${ARGV1})
     add_executable(${name} ${name}.cc ${test_obj_libs} ${HEADER_FILES})
@@ -26,11 +23,13 @@ function(add_project_test name)
     add_dependencies(build-test ${name})
     add_test(${name} ${name})  
   endif()
-endfunction()
+endmacro()
 
 # Test declarations
 #add_nc_test(readme_demos $<TARGET_OBJECTS:json_backbone_boost>)
+add_project_test(arithmetics CATCH)
 add_project_test(variant CATCH)
+add_project_test(container CATCH)
 
 #add_nc_test(unit_tests_boost_spirit GT $<TARGET_OBJECTS:json_backbone_boost>)
 #add_nc_test(perf_json_serialize $<TARGET_OBJECTS:json_backbone_boost>)
