--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ install:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
 
 build_script:
-  - cd c:\projects\cppproject
+  - cd c:\projects\json_backbone
   - mkdir build
   - cd build
   - echo %config%
